# algebraic-equation-over-finite-prime-field

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: lib.rs
