[package]
name = "algebraic-equation-over-finite-prime-field"
version = "0.2.0"
authors = ["Toru3 <ryuutet@gmail.com>"]
edition = "2018"
description = "solve algebraic equation over finite prime field"
license = "AGPL-3.0-or-later"
documentation = "https://docs.rs/algebraic-equation-over-finite-prime-field"
repository = "https://gitlab.com/Toru3/algebraic-equation-over-finite-prime-field"
readme = "README.md"
keywords = ["algebra", "prime", "modulo"]
categories = ["algorithms", "mathematics"]

[dependencies]
modulo-n-tools = "0.1.1"
num-traits = "0.2.14"
polynomial-over-finite-prime-field = "0.2.0"
rand = "0.8.3"
ring-algorithm = "0.3.0"
[dev-dependencies]
primal = "0.3.0"
rayon = "1.5.0"
[features]
default = []
__internal_inject_debug = [] # DO NOT USE
[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]
